Require phpspec in composer

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
             "email": "eszter.czotter@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "phpspec/phpspec": "^3.2"
+    }
 }
