--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "require": {},
     "require-dev": {
         "phpspec/phpspec": "^3.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Effy\\Configuru\\": "src/"
+        }
     }
 }
