--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^5.6 || ^7.0",
         "symfony/console": "^3.2"
     },
     "require-dev": {
