--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/console": "^3.2"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.2"
+        "phpspec/phpspec": "^3.2",
+        "codeception/codeception": "^2.2"
     },
     "autoload": {
         "psr-4": {
