--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        "symfony/console": "^3.2",
-        "league/flysystem": "^1.0"
+        "symfony/console": "^3.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.2",
