--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        "symfony/console": "^3.2"
+        "symfony/console": "^3.2",
+        "symfony/yaml": "^3.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.2",
