--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^7.0",
         "symfony/console": "^3.2",
-        "symfony/yaml": "^3.2"
+        "symfony/yaml": "^3.2",
+        "symfony/finder": "^3.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.2",
