--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^7.0",
         "symfony/console": "^3.2",
         "symfony/yaml": "^3.2",
-        "symfony/finder": "^3.2"
+        "symfony/finder": "^3.2",
+        "league/container": "^2.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.2",
