--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codress/configuru",
+    "name": "webmaesther/configuru",
     "description": "A single source of configuration",
     "type": "package",
     "license": "MIT",
